Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/search.scss
+++ b/front-gateway/src/components/Search/style/search.scss
@@ -40,11 +40,6 @@
 
   .search-results-container {
     background-color: $gray-lighter;
-
-    @media (max-width: $screen-xs-max) {
-      overflow-y: scroll; /* has to be scroll, not auto */
-      -webkit-overflow-scrolling: touch;
-    }
   }
 
   .loader-container {
