--- a/front-gateway/src/components/sharedStyles/styles.scss
+++ b/front-gateway/src/components/sharedStyles/styles.scss
@@ -20,6 +20,13 @@ html {
   overflow-x: hidden;
 }
 
+body {
+  @media (max-width: $screen-xs-max) {
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
+  }
+}
+
 .full-height {
   height: 100%;
 }
